fixes typos on shame.scss

--- a/source/scss/_pf-shame.scss
+++ b/source/scss/_pf-shame.scss
@@ -16,11 +16,11 @@ limitations under the License.
 //
 // Patternfly Shame
 // --------------------------------------------------
-// The nest fot all our shamefull code.
+// The nest for all our shamefull code.
 
 
-// This is a bug on bootstrap alpha 6, it is fixed on master. Remote thjs lines
-// after update to beta.
+// This is a bug on bootstrap alpha 6, it is fixed on master. Remove this lines
+// after the update to beta.
 input,
 button,
 select,
