changes min-width value and text on badges

--- a/source/scss/_pf-variables.scss
+++ b/source/scss/_pf-variables.scss
@@ -603,7 +603,7 @@ $cursor-disabled:                not-allowed !default;
 //
 // Dropdown menu container and contents.
 
-$dropdown-min-width:             $pf-spacer-xxxxl !default;
+$dropdown-min-width:             3em !default;
 $dropdown-padding-y:             $pf-spacer-xs !default;
 // $dropdown-margin-top:            0rem !default;
 $dropdown-bg:                    $pf-color-white !default;
