--- a/source/_patterns/basics/buttons/button.hbs
+++ b/source/_patterns/basics/buttons/button.hbs
@@ -1,4 +1,4 @@
-<button class="btn {{ btnClass }}" aria-labelledby="{{ btnAriaLabelledby }}">
+<button class="btn {{ btnClass }}" aria-labelledby="{{ btnAriaLabelledby }}" type="{{ btnType }}">
  {{#if @partial-block}}
    {{> @partial-block }}
  {{/if}}
