--- a/source/css/style.css
+++ b/source/css/style.css
@@ -27,6 +27,7 @@
  .sg-pattern-desc h2{
    font-size: 12px;
    margin-bottom: 10px;
+   margin-top: 0;
    text-transform: uppercase;
    font-weight: bold;
   }
