--- a/source/_patterns/basics/forms/input-controls.hbs
+++ b/source/_patterns/basics/forms/input-controls.hbs
@@ -1,24 +1,37 @@
-{{> basics-input formInputType="search" formInputValue="Search" formInputId="example-input-search" }}
+{{> basics-input formInputType="search" formInputValue="Search"
+formInputId="example-input-search" }}
 
-{{> basics-input formInputType="email" formInputValue="patternfly@example.com" formInputId="example-input-email" }}
+{{> basics-input formInputType="email" formInputValue="patternfly@example.com"
+formInputId="example-input-email" }}
 
-{{> basics-input formInputType="url" formInputValue="http://patternfly.com/" formInputId="example-input-url" }}
+{{> basics-input formInputType="url" formInputValue="http://patternfly.com/"
+formInputId="example-input-url" }}
 
-{{> basics-input formInputType="tel" formInputValue="1-(555)-555-5555" formInputId="example-input-tel" }}
+{{> basics-input formInputType="tel" formInputValue="1-(555)-555-5555"
+formInputId="example-input-tel" }}
 
-{{> basics-input formInputType="password" formInputValue="Password123" formInputId="example-input-password" }}
+{{> basics-input formInputType="password" formInputValue="Password123"
+formInputId="example-input-password" }}
 
-{{> basics-input formInputType="number" formInputValue="42" formInputId="example-input-number" }}
+{{> basics-input formInputType="number" formInputValue="42"
+formInputId="example-input-number" }}
 
-{{> basics-input formInputType="datetime-local" formInputValue="2011-08-19T13:45:00" formInputId="example-input-datetime-local" }}
+{{> basics-input formInputType="datetime-local"
+formInputValue="2011-08-19T13:45:00" formInputId="example-input-datetime-local"
+}}
 
-{{> basics-input formInputType="date" formInputValue="2011-08-19" formInputId="example-input-date" }}
+{{> basics-input formInputType="date" formInputValue="2011-08-19"
+formInputId="example-input-date" }}
 
-{{> basics-input formInputType="month" formInputValue="2011-08" formInputId="example-input-month" }}
+{{> basics-input formInputType="month" formInputValue="2011-08"
+formInputId="example-input-month" }}
 
-{{> basics-input formInputType="week" formInputValue="2011-W33" formInputId="example-input-week" }}
+{{> basics-input formInputType="week" formInputValue="2011-W33"
+formInputId="example-input-week" }}
 
-{{> basics-input formInputType="time" formInputValue="13:45:00" formInputId="example-input-time" }}
+{{> basics-input formInputType="time" formInputValue="13:45:00"
+formInputId="example-input-time" }}
 
-{{> basics-input formInputType="color" formInputValue="#0088CE" formInputId="example-input-color" }}
+{{> basics-input formInputType="color" formInputValue="#0088CE"
+formInputId="example-input-color" }}
 
