--- a/source/_patterns/basics/forms/static-controls.hbs
+++ b/source/_patterns/basics/forms/static-controls.hbs
@@ -10,7 +10,8 @@
       </div>
     </div>
 
-    {{> basics-form-group formRightAligned=true formLabel="Password" formInputType="password" formInputValue="" }}
+    {{> basics-form-group formRightAligned=true formLabel="Password"
+    formInputType="password" formInputId="example-input-static" }}
 
   </form>
 
