--- a/source/_patterns/basics/forms/control-sizing.hbs
+++ b/source/_patterns/basics/forms/control-sizing.hbs
@@ -1,8 +1,10 @@
 {{> basics-input formInputModifierClass="form-control-lg"
-formInputPlaceholder=".form-control-lg" }}
-{{> basics-input formInputPlaceholder="Default input"}}
+formInputPlaceholder=".form-control-lg" formInputId="example-form-control-large" }}
+{{> basics-input formInputPlaceholder="Default input"
+formInputId="example-form-control-default"}}
 {{> basics-input formInputModifierClass="form-control-sm"
-formInputPlaceholder=".form-control-sm"}}
+formInputPlaceholder=".form-control-sm"
+formInputId="example-form-control-small" }}
 
 {{> basics-select formInputModifierClass="form-control-lg" }}
 {{> basics-select }}
