--- a/source/_patterns/basics/forms/inline-forms.hbs
+++ b/source/_patterns/basics/forms/inline-forms.hbs
@@ -1,11 +1,16 @@
 <form class="form-inline">
 
   <label class="sr-only" for="email">Email</label>
-  {{> basics-input formInputModifierClass="mr-pf-sm" formLabel="Email" formInputType="email" formInputPlaceholder="email"}}
+  {{> basics-input formInputModifierClass="mr-pf-sm" formLabel="Email"
+  formInputType="email" formInputPlaceholder="email"
+  formInputId="example-inline-input-email" }}
 
   <label class="sr-only" for="password">Password</label>
-  {{> basics-input formInputModifierClass="mr-pf-sm" formLabel="Password" formInputType="password" formInputPlaceholder="password"}}
+  {{> basics-input formInputModifierClass="mr-pf-sm" formLabel="Password"
+  formInputType="password" formInputPlaceholder="password"
+  formInputId="example-inline-input-password"}}
 
-  {{> basics-button btnType="submit"  btnText="Sign In" btnClass="btn-primary" }}
+  {{> basics-button btnType="submit"  btnText="Sign In" btnClass="btn-primary"
+  }}
 
 </form>
