solves color input on chrome

--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -46,6 +46,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/tables";
 @import "pf-basic-tables";
 @import "node_modules/bootstrap/scss/forms";
+@import "pf-basic-forms";
 @import "node_modules/bootstrap/scss/buttons";
 @import "pf-basic-buttons";
 
