changes basic references to components after the move

--- a/source/_patterns/components/badges/badge-styles.hbs
+++ b/source/_patterns/components/badges/badge-styles.hbs
@@ -1,13 +1,13 @@
-<h1>Example heading {{> basics-badge badgeText="default" badgeClass="badge-default" }}</h1>
-<h2>Example heading {{> basics-badge badgeText="default" badgeClass="badge-default" }}</h2>
-<h3>Example heading {{> basics-badge badgeText="default" badgeClass="badge-default" }}</h3>
-<h4>Example heading {{> basics-badge badgeText="default" badgeClass="badge-default" }}</h4>
-<h5>Example heading {{> basics-badge badgeText="default" badgeClass="badge-default" }}</h5>
-<h6>Example heading {{> basics-badge badgeText="default" badgeClass="badge-default" }}</h6>
+<h1>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h1>
+<h2>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h2>
+<h3>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h3>
+<h4>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h4>
+<h5>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h5>
+<h6>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h6>
 
-{{> basics-badge badgeText="primary" badgeClass="badge-primary" }}
-{{> basics-badge badgeText="success" badgeClass="badge-success" }}
-{{> basics-badge badgeText="info" badgeClass="badge-info" }}
-{{> basics-badge badgeText="warning" badgeClass="badge-warning" }}
-{{> basics-badge badgeText="danger" badgeClass="badge-danger" }}
-{{> basics-badge badgeText="dismissable badge" badgeClass="badge-info" badgeDismissable="true"}}
+{{> components-badge badgeText="primary" badgeClass="badge-primary" }}
+{{> components-badge badgeText="success" badgeClass="badge-success" }}
+{{> components-badge badgeText="info" badgeClass="badge-info" }}
+{{> components-badge badgeText="warning" badgeClass="badge-warning" }}
+{{> components-badge badgeText="danger" badgeClass="badge-danger" }}
+{{> components-badge badgeText="dismissable badge" badgeClass="badge-info" badgeDismissable="true"}}
