--- a/source/_patterns/components/dropdowns/dropdown-states.hbs
+++ b/source/_patterns/components/dropdowns/dropdown-states.hbs
@@ -1,2 +1,2 @@
-{{> basics-dropdown dropdownText="Closed Dropdown"  }}
-{{> basics-dropdown dropdownText="Open Dropdown" dropdownState="show" }}
+{{> components-dropdown dropdownText="Closed Dropdown"  }}
+{{> components-dropdown dropdownText="Open Dropdown" dropdownState="show" }}
