--- a/source/_patterns/components/dropdowns/dropdown-styles.hbs
+++ b/source/_patterns/components/dropdowns/dropdown-styles.hbs
@@ -1,8 +1,8 @@
-{{> basics-dropdown dropdownText= "On Right" btnClass="btn-primary" pullright=true }}
-{{> basics-dropdown dropdownText= "Primary" btnClass="btn-primary" }}
-{{> basics-dropdown dropdownText= "Secondary" btnClass="btn-secondary" }}
-{{> basics-dropdown dropdownText= "Success" btnClass="btn-success" }}
-{{> basics-dropdown dropdownText= "Info" btnClass="btn-info" }}
-{{> basics-dropdown dropdownText= "Warning" btnClass="btn-warning" }}
-{{> basics-dropdown dropdownText= "Danger" btnClass="btn-danger" }}
-{{> basics-dropdown isKebab= true }}
+{{> components-dropdown dropdownText= "On Right" btnClass="btn-primary" pullright=true }}
+{{> components-dropdown dropdownText= "Primary" btnClass="btn-primary" }}
+{{> components-dropdown dropdownText= "Secondary" btnClass="btn-secondary" }}
+{{> components-dropdown dropdownText= "Success" btnClass="btn-success" }}
+{{> components-dropdown dropdownText= "Info" btnClass="btn-info" }}
+{{> components-dropdown dropdownText= "Warning" btnClass="btn-warning" }}
+{{> components-dropdown dropdownText= "Danger" btnClass="btn-danger" }}
+{{> components-dropdown isKebab= true }}
