--- a/source/_patterns/components/dropdowns/kebab.hbs
+++ b/source/_patterns/components/dropdowns/kebab.hbs
@@ -1,3 +1,3 @@
-{{#if pullright}}{{> basics-dropdown isKebab=true pullright=true }}
-{{else}}{{> basics-dropdown isKebab= true }}
+{{#if pullright}}{{> components-dropdown isKebab=true pullright=true }}
+{{else}}{{> components-dropdown isKebab= true }}
 {{/if}}
