--- a/source/_patterns/components/tabs/tabs-variations.hbs
+++ b/source/_patterns/components/tabs/tabs-variations.hbs
@@ -1,37 +1,37 @@
 Single level
-{{> basics-tabs }}
+{{> components-tabs }}
 <br/>
 <br/>
 
 Single Level with dropdown
-{{> basics-tabs dropdown="true"}}
+{{> components-tabs dropdown="true"}}
 <br/>
 <br/>
 
 Single Level with dropdown open
-{{> basics-tabs dropdown="true" dropdownActive="true"}}
+{{> components-tabs dropdown="true" dropdownActive="true"}}
 <br/>
 <br/>
 
 Single level with persistent secondary level
-{{> basics-tabs secondaryLevel="true"}}
+{{> components-tabs secondaryLevel="true"}}
 <br/>
 <br/>
 
 Single level with persistent secondary level and dropdown
-{{> basics-tabs secondaryLevel="true" secondaryDropdown="true"}}
+{{> components-tabs secondaryLevel="true" secondaryDropdown="true"}}
 <br/>
 <br/>
 
 Single level with persistent secondary level and dropdown open
-{{> basics-tabs secondaryLevel="true" secondaryDropdown="true" secondaryDropdownActive="true"}}
+{{> components-tabs secondaryLevel="true" secondaryDropdown="true" secondaryDropdownActive="true"}}
 <br/>
 <br/>
 Patternfly style single level
-{{> basics-tabs pfTabsAsPrimary="true"}}
+{{> components-tabs pfTabsAsPrimary="true"}}
 <br/>
 <br/>
 Patternfly style single level with dropdown open
-{{> basics-tabs pfTabsAsPrimary="true"  dropdown="true" dropdownActive="true"}}
+{{> components-tabs pfTabsAsPrimary="true"  dropdown="true" dropdownActive="true"}}
 <br/>
 <br/>
