--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -27,10 +27,10 @@ limitations under the License.
 
 // Core: Import Icon Fonts
 @import "node_modules/font-awesome/scss/font-awesome.scss";
-@import "pf-basic-icons";
+@import "pf-icons";
 
 // Core: Import Overpass Font
-@import "pf-basic-fonts";
+@import "pf-fonts";
 
 // Core: Reset and dependencies
 @import "node_modules/bootstrap/scss/normalize";
@@ -39,16 +39,16 @@ limitations under the License.
 // Basics
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
-@import "pf-basic-type";
+@import "pf-type";
 @import "node_modules/bootstrap/scss/images";
 @import "node_modules/bootstrap/scss/code";
 @import "node_modules/bootstrap/scss/grid";
 @import "node_modules/bootstrap/scss/tables";
-@import "pf-basic-tables";
+@import "pf-tables";
 @import "node_modules/bootstrap/scss/forms";
-@import "pf-basic-forms";
+@import "pf-forms";
 @import "node_modules/bootstrap/scss/buttons";
-@import "pf-basic-buttons";
+@import "pf-buttons";
 
 // Components
 @import "node_modules/bootstrap/scss/transitions";
@@ -57,24 +57,24 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/input-group";
 @import "node_modules/bootstrap/scss/custom-forms";
 @import "node_modules/bootstrap/scss/nav";
-@import "pf-basic-nav";
+@import "pf-nav";
 @import "node_modules/bootstrap/scss/navbar";
 @import "node_modules/bootstrap/scss/card";
-@import "pf-component-card";
+@import "pf-card";
 @import "node_modules/bootstrap/scss/breadcrumb";
 @import "node_modules/bootstrap/scss/pagination";
-@import "pf-component-pagination";
+@import "pf-pagination";
 @import "node_modules/bootstrap/scss/badge";
-@import "pf-basic-badge";
+@import "pf-badge";
 @import "node_modules/bootstrap/scss/jumbotron";
 @import "node_modules/bootstrap/scss/alert";
-@import "pf-component-alert";
+@import "pf-alert";
 @import "node_modules/bootstrap/scss/progress";
 @import "node_modules/bootstrap/scss/media";
 @import "node_modules/bootstrap/scss/list-group";
 @import "node_modules/bootstrap/scss/responsive-embed";
 @import "node_modules/bootstrap/scss/close";
-@import "pf-component-view-selector";
+@import "pf-view-selector";
 @import "pf-shame";
 
 // Components w/ JavaScript
