--- a/source/scss/_pf-forms.scss
+++ b/source/scss/_pf-forms.scss
@@ -24,3 +24,13 @@ input[type="color"] {
   padding: 0;
   height:  (1rem * $input-line-height) + ($input-padding-y * 2) + ((2 / $pf-font-size-root) * 1rem);
 }
+
+// Color the validation label
+.has-success,
+.has-warning,
+.has-danger {
+  .form-control-label,
+  .form-check-label {
+    color: $body-color;
+  }
+}
