--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -75,6 +75,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/responsive-embed";
 @import "node_modules/bootstrap/scss/close";
 @import "pf-view-selector";
+@import "pf-masthead";
 @import "pf-shame";
 
 // Components w/ JavaScript
