--- a/source/scss/_pf-masthead.scss
+++ b/source/scss/_pf-masthead.scss
@@ -22,23 +22,23 @@ limitations under the License.
   background-color: $pf-color-black-1000;
   border-top: 3px solid $pf-color-blue-300;
   color: $pf-color-black-300;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-    min-height: 2rem;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: stretch;
+    min-height: 5rem;
   @include media-breakpoint-up(md) {
     padding-left: ($grid-gutter-width-base / 2);
   } 
 }
 
-.pf-masthead__section {
-  display: flex;
-  align-items: inherit;
-}
+// .pf-masthead__section {
+//   display: flex;
+//   align-items: inherit;
+// }
 
 .pf-masthead__navicon {
-  display: flex;
-  align-self: center;
+  // display: flex;
+  // align-self: center;
   .fa {
     color: $pf-color-black-300;
   }
@@ -46,26 +46,26 @@ limitations under the License.
 .pf-masthead__brand {
   // display: block;
   padding: $pf-spacer-xxs 0 ;
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
   img {
     margin-right: $pf-spacer-xxs;
   }
 }
 
 .pf-utilities {
-  display: flex;
-  align-items: stretch;
+  // display: flex;
+  // align-items: self;
   .nav-item {
-    display: flex;
-    align-items: inherit;
+    // display: flex;
+    // align-items: inherit;
     border-left: 1px solid $pf-color-black-700;
   }
   .nav-link {
     // min-height: 2rem;
     // align-self: center;
-    display:flex;
-    align-items: center;
+    // display:flex;
+    // align-items: center;
     color: $pf-color-black-300;
     font-size: $font-size-sm;
     // padding-top: 0;
